fix for gallery preview spinner overlay on mobile

--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -88,6 +88,7 @@
     }
 
     .overlay {
+      pointer-events: none;
       position: absolute;
       top: 0;
       width: 100%;
